--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     </li>
                                     <li type="square">Provided explanations for errors in their code and constructive feedback.</li>
                                     <li type="square">Helped students solidify their foundational knowledge in data structures
-                                        by clarifying any misunderstood concepts and answering their questions online by hosting review sessions for mi.</li>
+                                        by clarifying any misunderstood concepts and answering their questions online by hosting review sessions for midterm/final.</li>
                                 </ul>
                                 </div>
                             </div>
