--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 
                                 <h2><b> CIFAR-10</b></h2>
                                 <p>The CIFAR-10 dataset has 10 categories. 
-                                    Used Google Colab, a cloud-based platform, to train Convolutional Neural Network (CNN) models with and without transfer learning..  </p>
+                                    Used Google Colab, a cloud-based platform, to train Convolutional Neural Network (CNN) models with and without transfer learning. </p>
                             </div>
                         </a>
                         </div>
