--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                             <!-- GitHub Button -->
                             <li><a id="github" href="https://github.com/KevinK88" target="_blank"><i class="fa fa-github"></i></a></li>
                             <!-- LinkedIn Button -->
-                            <li><a id="linkedin" href="https://www.linkedin.com/in/hungquach/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a id="linkedin" href="https://www.linkedin.com/in/hung/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                             <li><a id="email" href="mailto:hung.quachv@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
                         </ul>
                         <div class="copyright">
