--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="job-customize  ">
                             <div class="job wp5 ">
                                 
-                                <div class="job-title">Software Engineer Intern</div>
+                                <div class="job-title">Software Developer Intern</div>
                                 <div class="job-company">Sacramento Municipal Utility District - SMUD</div>              
                                 <div class="timework">May 2020 - August 2020</div>
                                 <div class="description">
@@ -125,6 +125,24 @@
                                 </div>
                             </div>
 
+
+                             <div class="job wp5">
+                                <div class="job-title">Teaching Assistant</div>
+                                <div class="job-company">CSUS Department of Computer Science</div>
+                                <div class="timework">January 2019 - May 2020</div>
+                                <div class="description">
+                                <ul>
+                                    <li type="square">Assisted a class of 60 students in the Introduction to Data Structure
+                                        class by debugging and grading their code for homework/projects.
+                                    </li>
+                                    <li type="square">Provided explanations for errors in their code and constructive feedback.</li>
+                                    <li type="square">Helped students solidify their foundational knowledge in data structures
+                                        by clarifying any misunderstood concepts and answering their questions online by hosting review sessions for midterm/final.</li>
+                                </ul>
+                                </div>
+                            </div>
+
+
                             <div class="job wp5">
                                 <div class="job-title">IT System Administrator Intern </div>
                                 <div class="job-company">State Compensation Insurance Fund</div>
@@ -141,21 +159,8 @@
                                 </ul>
                                 </div>
                             </div>
-                            <div class="job wp5">
-                                <div class="job-title">Teaching Assistant</div>
-                                <div class="job-company">CSUS Department of Computer Science</div>
-                                <div class="timework">January 2019 - May 2020</div>
-                                <div class="description">
-                                <ul>
-                                    <li type="square">Assisted a class of 60 students in the Introduction to Data Structure
-                                        class by debugging and grading their code for homework/projects.
-                                    </li>
-                                    <li type="square">Provided explanations for errors in their code and constructive feedback.</li>
-                                    <li type="square">Helped students solidify their foundational knowledge in data structures
-                                        by clarifying any misunderstood concepts and answering their questions online by hosting review sessions for midterm/final.</li>
-                                </ul>
-                                </div>
-                            </div>
+
+                           
 
                         </div>
 
