--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             </div>
                         
                             <div class="job wp5">
-                                <div class="job-title">Software Engineer Intern</div>
+                                <div class="job-title">Software Engineering Intern</div>
                                 <div class="job-company">Department of Conservation</div>
                                 <div class="timework">January 2020 - May 2020</div>
                                 <div class="description">
