Fixed change for conferene

--- a/index.html
+++ b/index.html
@@ -98,13 +98,11 @@
                                 <div class="timework">May 2020 - August 2020</div>
                                 <div class="description">
                                 <ul>
-                                    <li type="square">Wrote a full stack C# data visualization tool allowing Grid Operations 
-                                        team to make a prediction for emission in 20 years.</li>
-                                    <li type="square">Used .NET, Dapper, LINQ, LiveCharts.Wpf to make a user-friendly UI. </li>
-                                    <li type="square">Created a dashboard for the whole team to easily analyze which decreased 
-                                        more than <b>80%</b> of the workload through using MS Excel.</li>
+                                    <li type="square">Developed a full stack C# visualization tool automating and streamlining access to mission critical data on greenhouse gas emission for the whole region, which reduced <b>50%</b> of processing time.</li>
+                                    <li type="square">Used .NET, Dapper, LINQ, LiveCharts.Wpf to make a user-friendly GUI for research analysts and non-technical members.</li>
+                                    <li type="square">Created Windows Form for the team to analyze which decreased more than <b>80%</b> of the workload through using MS Excel.</li>
                                     <li type="square">Wrote and optimized Stored Procedures on Microsoft SQL Server. </li> 
-                                    <li type="square">Created a feature allowing to extract data to MS Excel for other departments. </li> 
+                                    <li type="square">Designed and optimized Stored Procedures on Microsoft SQL Server, which increased more than <b>60%</b> of retrieving data.</li> 
                                 </ul>
                                 </div>
                             </div>
@@ -115,12 +113,12 @@
                                 <div class="timework">January 2020 - May 2020</div>
                                 <div class="description">
                                 <ul>
-                                    <li type="square">Wrote Python scripts to parse and analyze data from the website to support 
-                                        U.S. Geological Survey for prediction of California’s earthquake.</li>
-                                    <li type="square">Maintained and upgraded features of a website algorithms reducing <b>60%</b> of delay time.</li>
+                                    <li type="square">Wrote Python scripts to parse and analyze data from the department website to support USGS for prediction of California’s
+earthquake, which simplified an otherwise complex process of accessing and analyzing data.</li>
+                                    <li type="square">Maintained and designed PHP algorithm connected to SQL server supporting users to retrieve data, which reduced <b>70%</b> delay.</li>
                                     <li type="square">Designed and developed dashboards connected to MySQL server to support users and U.S. Geological Survey easily 
                                         retrieve data.  </li>
-                                        <li type="square">Wrote XML files to display the intensity of earthquakes on Google Map. </li>
+                                        <li type="square">Wrote XML files to display the intensity of earthquakes on Google Map API. </li>
                                 </ul>
                                 </div>
                             </div>
@@ -152,7 +150,7 @@
                                     <li type="square">Served as IT System Administrator responsible for assessing the impact of all system-related changes on 
                                         integrated functionality to ensure efficient and effective operations are maintained.</li>
                                     <li type="square">Implemented adequate security controls for the proper safeguarding of confidential data 
-                                        and ensured the integrity of accurate employee information.</li>
+                                        and ensured the integrity of accurate employee information,, which led to <b>100%</b> free data breach.</li>
                                     <li type="square">Helped IT team build PowerShell scripts to transfer data from the master server to local computers.</li>
                                     <li type="square">Co-operated with NOC for troubleshooting problems and finding 
                                         solutions for issues arising from the data transfer.</li>
