--- a/index.html
+++ b/index.html
@@ -200,6 +200,31 @@ earthquake, which simplified an otherwise complex process of accessing and analy
                     <h2 class="section-heading">MY PROJECTS</h2>
                 </div>
                 <div class="row portfolio-row">
+
+
+                    <!-- MERN E-commerce Project -->
+                    <div class="portfolio-item-wrapper wp5">
+                        <a id="github" href="https://kevinshop.herokuapp.com" target="_blank">
+                        <div class="portfolio-item" data-toggle="modal" >
+                            <div class="portfolio-overlay"></div>      
+                            <div class="links">
+                                <a class="image-link"><i class="fa fa-github"></i></a>
+                            </div>
+                            <img src="img/store.png" alt="image">
+                            <div class="portfolio-info">
+                                <a id="github" href="https://kevinshop.herokuapp.com" target="_blank">
+                                <h2><b>Gadgets & Electronic Websites</b></h2>
+                                <p>
+                                    A project implemented in MERN stack that users can select, purchase and make a transaction using PayPal sandbox. 
+                                </p>
+                            </a>
+                            </div>
+                        </div>
+                    </a>
+                    </div>
+
+
+
                     <!-- CSC133 Project -->
                     <div class="portfolio-item-wrapper wp5">
                         <a id="github" href="https://github.com/KevinK88/CSC-133" target="_blank">
